welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: not found: value getHauteur
	if(getX== getMondeLargeur()-1&&getY == getHauteur()-1){
                                               ^